[gd_scene load_steps=6 format=3 uid="uid://bmhuqy5d22rle"]

[ext_resource type="Script" path="res://scripts/panel_left.gd" id="1_fd167"]
[ext_resource type="Script" path="res://scripts/ElementTree.gd" id="1_x7vqb"]
[ext_resource type="Texture2D" uid="uid://cl6p7qoraugv8" path="res://Graphics/add_element.png" id="3_gq55o"]
[ext_resource type="Texture2D" uid="uid://7tukw4qrqkpn" path="res://Graphics/add_layer.png" id="4_0hwhm"]
[ext_resource type="Texture2D" uid="uid://c60opsv5gwi3c" path="res://Graphics/del.png" id="4_gau7x"]

[node name="PanelLeft" type="Panel"]
offset_top = 40.0
offset_right = 256.0
offset_bottom = 456.0
script = ExtResource("1_fd167")

[node name="ElementTree" type="Tree" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 248.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 12
columns = 2
column_titles_visible = true
select_mode = 1
script = ExtResource("1_x7vqb")

[node name="addElement" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 387.0
offset_right = 38.0
offset_bottom = 417.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("3_gq55o")
icon_alignment = 1

[node name="addLayer" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 387.0
offset_right = 70.0
offset_bottom = 417.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("4_0hwhm")
icon_alignment = 1

[node name="delElement" type="Button" parent="."]
layout_mode = 0
offset_left = 219.0
offset_top = 387.0
offset_right = 251.0
offset_bottom = 418.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("4_gau7x")
icon_alignment = 1

[node name="Label" type="Label" parent="."]
modulate = Color(0.521569, 0.521569, 0.521569, 1)
layout_mode = 0
offset_left = 9.0
offset_top = 4.0
offset_right = 248.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 11
text = "Element List"
horizontal_alignment = 1

[connection signal="gui_input" from="ElementTree" to="ElementTree" method="_on_gui_input"]
[connection signal="item_selected" from="ElementTree" to="ElementTree" method="_on_item_selected"]
[connection signal="pressed" from="addElement" to="." method="_on_add_element_pressed"]
[connection signal="pressed" from="addLayer" to="." method="_on_add_layer_pressed"]
[connection signal="pressed" from="delElement" to="." method="_on_del_element_pressed"]
